--- a/Estilo/estilo.css
+++ b/Estilo/estilo.css
@@ -1,15 +1,20 @@
 *{
-    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
 }
 
 body{
-    background-image: url(background2.png);
+    font-family: Arial, Helvetica, sans-serif;
+    background-image: url("../Imagens/background2.png");
 }
 
 .avatar{
     border-radius: 50%;
     margin-left: 10px;
     width: 100px;
+    height: auto;
 }
 
 .navbar-nav a:hover:not(.active){
@@ -20,17 +25,13 @@ body{
     background-color:#9400D3;
 }
 
-.navbar, .bg-footer {
-    background-image: url(background.png);
+.navbar, .bg-footer{
+    background-image: url("../Imagens/background.png");
 }
 
 .margin{
     padding-top: 30px;
-    padding-bottom: 30px;
-}
-
-footer{
-    color: white;
+    padding-bottom: 60px;
 }
 
 a:link {
